# Investment-Research-analyst-AI-Agent

./: .gitignore  README.md  pyproject.toml
src/investment_research_analyst/: crew.py  main.py
src/investment_research_analyst/config/: agents.yaml  tasks.yaml
